Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135959

tst_QWebSocket::moveToThreadNoWarning is failing

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.10.0 Beta3
    • 6.9
    • WebSockets
    • None
    • macOS
    • 0c0f47615 (dev), 1ff930de9 (dev)

      FAIL! : tst_QWebSocket::tst_moveToThreadNoWarning() Compared values are not the same
      Actual (Warned::warned): 1
      Expected (false) : 0

      There are two warnings:

      QWARN : tst_QWebSocket::tst_moveToThread() QObject::disconnect: wildcard call disconnects from destroyed signal of QTcpSocket::unnamed
      QWARN : tst_QWebSocket::tst_moveToThread() QObject::disconnect: wildcard call disconnects from destroyed signal of QTcpSocket::unnamed

        For Gerrit Dashboard: QTBUG-135959
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes